@@ -116,11 +116,13 @@ public class ProcessInstanceMigrationMigrateProcessor
   public ProcessingError tryHandleError(
       final TypedRecord<ProcessInstanceMigrationRecord> command, final Throwable error) {
     if (error instanceof final UnsupportedElementMigrationException e) {
-      final String reason =
-          "Expected to migrate process instance '%s' but it contains an active element that is unsupported: %s"
-              .formatted(command.getKey(), e.getMessage());
-      rejectionWriter.appendRejection(command, RejectionType.INVALID_STATE, reason);
-      responseWriter.writeRejectionOnCommand(command, RejectionType.INVALID_STATE, reason);
+      rejectionWriter.appendRejection(command, RejectionType.INVALID_STATE, e.getMessage());
+      responseWriter.writeRejectionOnCommand(command, RejectionType.INVALID_STATE, e.getMessage());
+      return ProcessingError.EXPECTED_ERROR;
+    }
+    if (error instanceof final UnmappedActiveElementException e) {
+      rejectionWriter.appendRejection(command, RejectionType.INVALID_STATE, e.getMessage());
+      responseWriter.writeRejectionOnCommand(command, RejectionType.INVALID_STATE, e.getMessage());
       return ProcessingError.EXPECTED_ERROR;
     }
 
@@ -152,11 +154,17 @@ public class ProcessInstanceMigrationMigrateProcessor
     final var elementInstanceRecord = elementInstance.getValue();
     if (UNSUPPORTED_ELEMENT_TYPES.contains(elementInstanceRecord.getBpmnElementType())) {
       throw new UnsupportedElementMigrationException(
-          elementInstanceRecord.getElementId(), elementInstanceRecord.getBpmnElementType());
+          elementInstanceRecord.getProcessInstanceKey(),
+          elementInstanceRecord.getElementId(),
+          elementInstanceRecord.getBpmnElementType());
     }
 
     final String targetElementId =
         sourceElementIdToTargetElementId.get(elementInstanceRecord.getElementId());
+    if (targetElementId == null) {
+      throw new UnmappedActiveElementException(
+          elementInstanceRecord.getProcessInstanceKey(), elementInstanceRecord.getElementId());
+    }
 
     stateWriter.appendFollowUpEvent(
         elementInstance.getKey(),
@@ -187,8 +195,32 @@ public class ProcessInstanceMigrationMigrateProcessor
    */
   private static final class UnsupportedElementMigrationException extends RuntimeException {
     UnsupportedElementMigrationException(
-        final String elementId, final BpmnElementType bpmnElementType) {
-      super("%s. The migration of a %s is not supported.".formatted(elementId, bpmnElementType));
+        final long processInstanceKey,
+        final String elementId,
+        final BpmnElementType bpmnElementType) {
+      super(
+          String.format(
+              """
+              Expected to migrate process instance '%s' \
+              but active element with id '%s' has an unsupported type. \
+              The migration of a %s is not supported.""",
+              processInstanceKey, elementId, bpmnElementType));
+    }
+  }
+
+  /**
+   * Exception that can be thrown during the migration of a process instance, in case the engine
+   * attempts to migrate an element which is not mapped.
+   */
+  private static final class UnmappedActiveElementException extends RuntimeException {
+    UnmappedActiveElementException(final long processInstanceKey, final String elementId) {
+      super(
+          String.format(
+              """
+              Expected to migrate process instance '%s' \
+              but no mapping instruction defined for active element with id '%s'. \
+              Elements cannot be migrated without a mapping.""",
+              processInstanceKey, elementId));
     }
   }
 }
